package edu.masanz.da.torneo.term.config;

public class Ctes {

    public static final String TITULO = "Torneos Padel";
    public static final int LONG_TITULO = 80;

    public static final int OPC_SALIR = 0;

    public static final int OPC_ADM_TORNEOS = 1;
    public static final int OPC_ADM_RESULTADOS = 2;
    public static final int OPC_ADM_AVANZAR = 3;
    public static final int OPC_ADM_TORNEO_NUEVO = 4;
    public static final int OPC_ADM_GEST_EQUIPOS = 5;
    public static final int OPC_ADM_GEST_USUARIOS = 6;
    public static final int OPC_ADM_TORNEO_BORRADO = 7;

    public static final int OPC_ADM_AVANZAR_REVOLVER = 1;
    public static final int OPC_ADM_AVANZAR_EMPEZAR = 2;
    public static final int OPC_ADM_AVANZAR_AVANZAR = 3;
    public static final int OPC_ADM_AVANZAR_TERMINAR = 4;

    public static final int OPC_ADM_USUARIOS = 1;
    public static final int OPC_ADM_USUARIOS_AGREGAR = 2;
    public static final int OPC_ADM_USUARIOS_CAMBIAR = 3;
    public static final int OPC_ADM_USUARIOS_BORRAR = 4;

}
